--- a/jair.bib
+++ b/jair.bib
@@ -417,3 +417,26 @@ year = {2012}
   publisher = {Wiley Series in Probability and Statistics},
   year = {1990}
 }
+
+@INPROCEEDINGS{moses,
+    author = {Hieu Hoang and Alexandra Birch and Chris Callison-burch and Richard Zens and Rwth Aachen and Alexandra Constantin and Marcello Federico and Nicola Bertoldi and Chris Dyer and Brooke Cowan and Wade Shen and Christine Moran and Ondrej Bojar},
+    title = {Moses: Open source toolkit for statistical machine translation},
+    booktitle = {},
+    year = {2007},
+    pages = {177--180}
+}
+
+
+@article{huertatowards,
+  title={Towards Cross-Lingual Sentence Similarity Comparison: A Generalized Non-Negative Matrix Factorization Approach},
+  author={Huerta, Juan M}
+}
+
+@inproceedings{platt2010translingual,
+  title={Translingual document representations from discriminative projections},
+  author={Platt, John C and Toutanova, Kristina and Yih, Wen-tau},
+  booktitle={Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  pages={251--261},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
