- added refs to related work and ER

--- a/jair.bib
+++ b/jair.bib
@@ -417,3 +417,51 @@ year = {2012}
   publisher = {Wiley Series in Probability and Statistics},
   year = {1990}
 }
+
+@inproceedings{Leban2014W,
+  author = {Leban, Gregor and Fortuna, Blaz and Brank, Janez and Grobelnik, Marko},
+  title = {Event Registry: Learning About World Events from News},
+  booktitle = {Proceedings of the Companion Publication of the 23rd International Conference on World Wide Web Companion},
+  series = {WWW Companion '14},
+  year = {2014},
+  pages = {107--110},
+  publisher = {International World Wide Web Conferences Steering Committee},
+}
+
+@inproceedings{Leban2014I,
+  author = {Leban, Gregor and Fortuna, Blaz and Brank, Janez and Grobelnik, Marko},
+  title = {Cross-lingual detection of world events from news articles},
+  booktitle = {Proceedings of the 13th International Semantic Web Conference},
+  year = {2014},
+  pages = {21--24}
+}
+
+@inproceedings{Brank2014,
+  author = {Brank, Janez and Leban, Gregor and Grobelnik, Marko},
+  title = {A High-Performance Multithreaded Approach for Clustering a Stream of Documents},
+  booktitle = {Proceedings of the SiKDD2014 conference, Ljubljana, Slovenia},
+  year = {2014}
+}
+
+@article{Steinberger2008,
+  title={NewsExplorer -- combining various text analysis tools to allow multilingual news linking and exploration},
+  author={Steinberger, Ralf and Pouliquen, Bruno},
+  journal={Lecture notes for the lecture held at the SORIA Summer School “Cursos de Tecnolog{\i}as Ling{\"u}{\i}sticas},
+  year={2008}
+}
+
+@article{Pouliquen2006,
+  title={Automatic annotation of multilingual text collections with a conceptual thesaurus},
+  author={Pouliquen, Bruno and Steinberger, Ralf and Ignat, Camelia},
+  journal={arXiv preprint cs/0609059},
+  year={2006}
+}
+
+@inproceedings{Leetaru2013Gdelt,
+  title={GDELT: Global data on events, location, and tone, 1979--2012},
+  author={Leetaru, Kalev and Schrodt, Philip A},
+  booktitle={ISA Annual Convention},
+  volume={2},
+  pages={4},
+  year={2013}
+}
